add image settings

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
 <body>
     @@include('html/header.html')
     <main>
-        <img src="@img/nature.jpeg" alt="nature">
+        <img src="@img/new.jpg" alt="nature" width="200px">
     </main>
     @@include('html/footer.html')
+    <script src="js/app.min.js"></script>
 </body>
 </html>
