add fonts and sprite

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <body>
     @@include('html/header.html')
     <main>
+        <h1>hello</h1>
         <img src="@img/new.jpg" alt="nature" width="200px">
     </main>
     @@include('html/footer.html')
