finished to setting gulp

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
 <body>
     @@include('html/header.html')
     <main>
-        <h1>hello</h1>
-        <img src="@img/new.jpg" alt="nature" width="200px">
+        @@include('html/main.html')
     </main>
     @@include('html/footer.html')
     <script src="js/app.min.js"></script>
